[package]
authors = ["Richard Cook"]
categories = ["encoding", "filesystem"]
description = "Jack of All Trades Master of None"
edition = "2021"
homepage = "https://github.com/rcook/joatmon-rs"
keywords = ["general"]
license = "MIT"
name = "joatmon"
repository = "https://github.com/rcook/joatmon-rs"
version = "0.0.31"

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
thiserror = "1.0.44"
toml = "0.7.6"
toml_edit = "0.19.14"

[dev-dependencies]
serial_test = "2.0.0"
rstest = "0.18.1"
tempdir = "0.3.7"
