[package]
authors = ["Richard Cook"]
categories = ["encoding", "filesystem"]
description = "Jack of All Trades Master of None"
edition = "2021"
homepage = "https://github.com/rcook/joatmon-rs"
keywords = ["general"]
license = "MIT"
name = "joatmon"
readme = "README.md"
repository = "https://github.com/rcook/joatmon-rs.git"
version = "0.0.32"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
thiserror = "1.0.48"
toml = "0.8.0"
toml_edit = "0.20.0"

[dev-dependencies]
serial_test = "2.0.0"
rstest = "0.18.2"
tempdir = "0.3.7"
