[package]
authors = ["Richard Cook"]
categories = ["encoding", "filesystem"]
description = "Jack of All Trades Master of None"
edition = "2021"
homepage = "https://github.com/rcook/joatmon-rs"
keywords = ["general"]
license = "MIT"
name = "joatmon"
readme = "README.md"
repository = "https://github.com/rcook/joatmon-rs.git"
version = "0.0.34"

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.35"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.33"
thiserror = "1.0.58"
toml = "0.8.12"
toml_edit = "0.22.9"

[dev-dependencies]
serial_test = "3.0.0"
rstest = "0.18.2"
tempdir = "0.3.7"
